@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - on_start event now gets program and arguments passed to the run method
 
 0.77      2014-03-20 17:55:47 -0400
   - on_error event now gets program and arguments passed to the run method
